syntax = "proto3";
package identity;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/t3201v/ms/identity";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Resource Service API"
    version: "1.0.0"
  }
  security_definitions: {
    security: {
      key: "BearerAuth"
      value: {
        type: TYPE_API_KEY
        name: "Authorization"
        in: IN_HEADER
      }
    }
  }
};

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/identity/login"
      body: "*"
    };
  }
}

message LoginRequest {
}

message LoginResponse {
  string token = 1;
}
