syntax = "proto3";
package serviceb;

import "google/api/annotations.proto";

option go_package = "github.com/t3201v/ms/resource";

service ServiceB {
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      post: "/resource/say"
      body: "*"
    };
  };
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
